tests/fixtures/invalid/pow_list_dict_str.py
# Cannot call pow() with List[int], Dict[str, int], Str
x = pow([1, 2, 3], {"a": 1}, "hello")
